# inferno

./: README.md  pyproject.toml
.github/workflows/: ci.yml
inferno/: __init__.py  model_families.py  runtime_manager.py
tests/: test_backend.py  test_launch_config.py  test_litert_adapter.py  test_model_families.py  test_model_registry.py  test_orchestrator.py  test_runtime_manager.py
