[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potato-inferno"
version = "0.1.0"
description = "Inference layer for Potato OS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.118.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["inferno"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "respx>=0.21.0,<1.0.0",
]
